Fix conclusion mobile responsiveness

--- a/styles/conclusion.css
+++ b/styles/conclusion.css
@@ -33,6 +33,8 @@
   font-size: 4rem;
   font-family: myFont;
   text-align: center;
+  align-items: center;
+  justify-content: center;
   color: white;
 }
 
@@ -61,10 +63,6 @@
   margin: 30px auto;
   width: 250px;
   text-align: center;
-}
-
-.fa-layer-group, .fa-users {
-  font-size: 14rem;
 }
 
 /* Mobile Responsive*/
@@ -107,17 +105,14 @@
   }
 }
 
-@media screen and (max-width: 480px) {
-  .conclusion_img_card {
+@media screen and (max-width: 430px) {
+  .conclusion_img {
     height: 250px;
-  }
-
-  .fa-users, .fa-layer-group {
-    font-size: 4rem;
+    width: 250px;
   }
 
   .conclusion_content h1 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-top: 3remx;
   }
 
@@ -125,11 +120,9 @@
     font-size: 2rem;
   }
 
-  .main_btn {
-    padding: 12px 36px;
-    margin: 2.5rem 0;
+  .conclusion_btn {
+    font-size: 1.5rem;
   }
-
 }
 
 
